--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "co": "4.6.0",
-    "heroku-cli-util": "5.10.11"
+    "heroku-cli-util": "5.10.12",
+    "heroku-run": "3.2.4"
   },
   "devDependencies": {
     "standard": "7.0.1"
