--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "standard": "7.1.2"
   },
+  "files": "/index.js",
   "homepage": "https://github.com/heroku/heroku-vim",
   "keywords": [
     "heroku-plugin"
